--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-# OS X
-.DS_Store
-
-# Xcode
+### Objective-C  & Xcode ###
 build/
 *.pbxuser
 !default.pbxuser
@@ -11,23 +8,31 @@ build/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
-xcuserdata/
+xcuserdata
 *.xccheckout
-profile
 *.moved-aside
 DerivedData
 *.hmap
 *.ipa
+*.xcuserstate
+.env
 
-# Bundler
-.bundle
+### CocoaPods ###
+Pods/
 
-Carthage
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
-# 
-# Note: if you ignore the Pods directory, make sure to uncomment
-# `pod install` in .travis.yml
-#
-# Pods/
+### Carthage ###
+## Carthage - A simple, decentralized dependency manager for Cocoa
+Carthage/Checkouts/
+Carthage/Build/
+
+# fastlane specific
+fastlane/report.xml
+
+# deliver temporary files
+fastlane/Preview.html
+
+# snapshot generated screenshots
+fastlane/screenshots
+
+# scan temporary files
+fastlane/test_output
