--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,13 @@
-# references:
-# * http://www.objc.io/issue-6/travis-ci.html
-# * https://github.com/supermarin/xcpretty#usage
-
-osx_image: xcode7.3
+osx_image: xcode8
 language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+notifications:
+  email: false
+before_install:
+- gem install bundler
+- bundle install
 script:
-- set -o pipefail && xcodebuild test -workspace Example/Moya-JASONMapper.xcworkspace -scheme Moya-JASONMapper-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+- bundle exec fastlane travis
+after_success:
+- bundle exec fastlane push
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
