--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
-osx_image: xcode8
 language: objective-c
+osx_image: xcode8
+podfile: Example/Podfile
 notifications:
   email: false
-before_install:
+before_install: 
+- gem uninstall cocoapods -a
+- gem install cocoapods --pre
+- gem install xcpretty
 - gem install bundler
 - bundle install
+- bundle exec pod update --project-directory=Example/
+
 script:
-- bundle exec fastlane travis
-after_success:
-- bundle exec fastlane push
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+- xcodebuild test -workspace Example/Moya-SwiftyJSONMapper.xcworkspace -scheme Moya-SwiftyJSONMapper-Example -destination 'platform=iOS Simulator,name=iPhone 6,OS=10.0' | xcpretty -c && exit ${PIPESTATUS[0]}
