--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,8 +1,10 @@
 source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
 
+platform :ios, '9.0'
+
 def sharedPods
-    pod 'JASON', :git => 'https://github.com/delba/JASON.git', :branch => 'swift-2.3'
+    pod 'JASON'
     pod 'Moya-JASONMapper', :path => '../'
     pod 'Moya-JASONMapper/RxSwift', :path => '../'
     pod 'Moya-JASONMapper/ReactiveCocoa', :path => '../'
@@ -20,7 +22,7 @@ end
 post_install do |installer|
     installer.pods_project.targets.each do |target|
         target.build_configurations.each do |config|
-            config.build_settings['SWIFT_VERSION'] = '2.3'
+            config.build_settings['SWIFT_VERSION'] = '3.0'
         end
     end
 end
