--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,7 +5,7 @@ platform :ios, '8.0'
 
 def sharedPods
     pod 'JASON'
-    pod 'Moya', :git => 'https://github.com/Moya/Moya.git'
+    pod 'Moya'
     pod 'Moya-JASONMapper', :path => '../'
     pod 'Moya-JASONMapper/RxSwift', :path => '../'
     pod 'Moya-JASONMapper/ReactiveSwift', :path => '../'
